NULL =

sounddir = $(datadir)/sounds/meego/stereo

sound_DATA =                            \
	alert-1.wav			\
	alert-2.wav			\
	alert-3.wav			\
	alert-4.wav			\
	battery-empty.wav		\
	battery-low.wav			\
	camera-self-timer.wav		\
	camera-shutter.wav		\
	chat-bg.wav			\
	chat-fg.wav			\
	connect.wav			\
	default-beep.wav		\
	disconnect.wav			\
	error.wav			\
	info.wav			\
	key-1.wav			\
	key-2.wav			\
	query.wav			\
	rec-start.wav			\
	rec-stop.wav			\
	ring-1.wav			\
	ring-2.wav			\
	ring-3.wav			\
	ring-4.wav			\
	volume-max.wav			\
	volume-min.wav			\
	$(NULL)

EXTRA_DIST =            \
	$(sound_DATA)	\
	$(NULL)

DISTCLEANFILES = \
	$(NULL)

MAINTAINERCLEANFILES =		\
	*~			\
	Makefile.in		\
	$(NULL)
